# TicketToRide

./: README.md
src/: CMakeLists.txt  TicketToRide.cpp
src/board/: Tile.cpp  Tile.hpp  Utils.hpp
src/items/: Card.cpp  Card.hpp  Colors.hpp  Destinations.hpp  Ticket.hpp
